--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "date-fns": "^2.26.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-chrono": "^1.12.5",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "sass": "^1.43.4",
